--- a/clase-02/styles/button.css
+++ b/clase-02/styles/button.css
@@ -14,6 +14,12 @@
   color: var(--gray-200);
 }
 
+.button--blue, .button--ghost.button--blue:hover {
+  background: var(--blue-200);
+  border-color: var(--blue-200);
+  color: var(--gray-100);
+}
+
 .button--ghost {
   background: transparent;
   color: var(--gray-200);
@@ -21,4 +27,8 @@
 
 .button--ghost.button--red {
   color: var(--red-600);
+}
+
+.button--ghost.button--blue {
+  color: var(--blue-200);
 }
